# XRayPro

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: demo.ipynb  experimental.ipynb  finetuning.ipynb  predictions.ipynb  pretrain.py
src/SSL/: geometric_descriptors.ipynb  ssl.ipynb  ssl_geo.ipynb
src/tasks/: Task1_Predict.ipynb  Task2_Infer.ipynb  Task3_Recommend.ipynb  Task4_Retrieve.ipynb
src/xraypro/: addition.py  finetune_xraypro.py  lc_xraypro.py  preprocess_new.py  rec.py  run.py  setGen.py  xraypro.py
src/xraypro/MOFormer_modded/: dataset_multi.py
src/xraypro/cgcnn/: extract.py
src/xraypro/transformer_precursor/: config_data.yaml  config_ft_transformer.yaml
tests/: __init__.py  ft_arabg.ipynb  ft_core.ipynb
tests/arabg/: ARABG_alldata.csv
tests/arabg/ARABG_XRD/: acs_sym_7_mc_4__L_12_FGB_2__.npy  acs_sym_7_mc_4__L_12_FGB_4__.npy  acs_sym_7_mc_4__L_12_FGCF_2__.npy  acs_sym_7_mc_4__L_12_FGCN_2__.npy  acs_sym_7_mc_4__L_12_FGF_4__.npy  acs_sym_7_mc_4__L_12_FGM_2__.npy  acs_sym_7_mc_4__L_12_FGNH_2__.npy  acs_sym_7_mc_4__L_12_FGNO_2__.npy  acs_sym_7_mc_4__L_12_FGOH_2__.npy  acs_sym_7_mc_4__L_12_FGSH_2__.npy  acs_sym_7_mc_4__L_12__.npy  bcs_sym_16_mc_14__L_12_FGB_2__.npy  bcs_sym_16_mc_14__L_12_FGB_4__.npy  bcs_sym_16_mc_14__L_12_FGCF_2__.npy  bcs_sym_16_mc_14__L_12_FGCN_2__.npy  bcs_sym_16_mc_14__L_12_FGCN_4__.npy  (+384 more)
tests/core2019/: good_mofs.npy
(+12402 files in other folders)
