[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xraypro"
version = "0.1.0"
description = "A recommendation system for MOFs leveraging only PXRDs and precursors"
readme = "README.rst"
authors = [
  {name = "Sartaaj Khan", email = "sartaaj.khan@mail.utoronto.ca"}
]
maintainers = [
  {name = "Sartaaj Khan", email = "sartaaj.khan@mail.utoronto.ca"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/sartaajkhan/xraypro/issues"
changelog = "https://github.com/sartaajkhan/xraypro/blob/master/changelog.md"
homepage = "https://github.com/sartaajkhan/xraypro"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

